--- a/client/overwatch/package.json
+++ b/client/overwatch/package.json
@@ -3,12 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@pusher/chatkit": "^0.7.12",
     "axios": "^0.18.0",
     "bootstrap": "^4.1.1",
     "jwt-decode": "^2.2.0",
     "react": "^16.3.2",
     "react-bootstrap": "^0.32.1",
     "react-dom": "^16.3.2",
+    "react-infinite-scroller": "^1.1.4",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.4",
