--- a/client/overwatch/package.json
+++ b/client/overwatch/package.json
@@ -7,6 +7,7 @@
     "axios": "^0.18.0",
     "bootstrap": "^4.1.1",
     "jwt-decode": "^2.2.0",
+    "overwatch-api": "^0.4.0",
     "react": "^16.3.2",
     "react-bootstrap": "^0.32.1",
     "react-dom": "^16.3.2",
