--- a/client/overwatch/package.json
+++ b/client/overwatch/package.json
@@ -10,6 +10,7 @@
     "overwatch-api": "^0.4.0",
     "react": "^16.3.2",
     "react-bootstrap": "^0.32.1",
+    "react-chatview": "^0.2.5",
     "react-dom": "^16.3.2",
     "react-infinite-scroller": "^1.1.4",
     "react-redux": "^5.0.7",
