--- a/client/overwatch/package.json
+++ b/client/overwatch/package.json
@@ -7,11 +7,13 @@
     "axios": "^0.18.0",
     "bootstrap": "^4.1.1",
     "jwt-decode": "^2.2.0",
+    "lodash": "^4.17.10",
     "overwatch-api": "^0.4.0",
     "react": "^16.3.2",
     "react-bootstrap": "^0.32.1",
     "react-chatview": "^0.2.5",
     "react-dom": "^16.3.2",
+    "react-infinite": "^0.13.0",
     "react-infinite-scroller": "^1.1.4",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.2.2",
@@ -19,6 +21,7 @@
     "reactstrap": "^6.0.1",
     "redux": "^4.0.0",
     "redux-devtools-extension": "^2.13.2",
+    "redux-logger": "^3.0.6",
     "redux-thunk": "^2.2.0",
     "socket.io-client": "^2.1.1"
   },
