--- a/client/overwatch/package.json
+++ b/client/overwatch/package.json
@@ -6,6 +6,7 @@
     "@pusher/chatkit": "^0.7.12",
     "axios": "^0.18.0",
     "bootstrap": "^4.1.1",
+    "jest": "^23.0.1",
     "jwt-decode": "^2.2.0",
     "lodash": "^4.17.10",
     "overwatch-api": "^0.4.0",
@@ -18,6 +19,7 @@
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.4",
+    "react-test-renderer": "^16.4.0",
     "reactstrap": "^6.0.1",
     "redux": "^4.0.0",
     "redux-devtools-extension": "^2.13.2",
