--- a/client/overwatch/package.json
+++ b/client/overwatch/package.json
@@ -6,6 +6,7 @@
     "@pusher/chatkit": "^0.7.12",
     "axios": "^0.18.0",
     "bootstrap": "^4.1.1",
+    "fetch-mock": "^6.4.3",
     "jest": "^23.0.1",
     "jwt-decode": "^2.2.0",
     "lodash": "^4.17.10",
@@ -32,5 +33,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
+  },
+  "devDependencies": {
+    "redux-mock-store": "^1.5.1"
   }
 }
