moved some logic around with set_current_user

--- a/client/overwatch/package.json
+++ b/client/overwatch/package.json
@@ -6,10 +6,12 @@
     "@pusher/chatkit": "^0.7.12",
     "axios": "^0.18.0",
     "bootstrap": "^4.1.1",
+    "expect": "^23.1.0",
     "fetch-mock": "^6.4.3",
     "jest": "^23.0.1",
     "jwt-decode": "^2.2.0",
     "lodash": "^4.17.10",
+    "moxios": "^0.4.0",
     "overwatch-api": "^0.4.0",
     "react": "^16.3.2",
     "react-bootstrap": "^0.32.1",
