--- a/client/overwatch/package.json
+++ b/client/overwatch/package.json
@@ -30,7 +30,8 @@
     "redux-devtools-extension": "^2.13.2",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.2.0",
-    "socket.io-client": "^2.1.1"
+    "socket.io-client": "^2.1.1",
+    "yup": "^0.25.1"
   },
   "scripts": {
     "start": "react-scripts start",
