--- a/client/overwatch/package.json
+++ b/client/overwatch/package.json
@@ -13,6 +13,7 @@
     "jwt-decode": "^2.2.0",
     "lodash": "^4.17.10",
     "moxios": "^0.4.0",
+    "normalize.css": "^8.0.0",
     "overwatch-api": "^0.4.0",
     "react": "^16.3.2",
     "react-bootstrap": "^0.32.1",
@@ -31,6 +32,7 @@
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.2.0",
     "socket.io-client": "^2.1.1",
+    "sweetalert-react": "^0.4.11",
     "yup": "^0.25.1"
   },
   "scripts": {
